[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/enemyA.png" type="Texture" id=1]
[ext_resource path="res://Enemies/enemyA 2.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemyA.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 1.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1.1, 1.4, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -6 ), Vector2( 0, -13 ), Vector2( 0, -6 ), Vector2( 0, -13 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 67.0

[node name="EnemyA" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 3 )
sight_range = 200
speed = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="RayCast_1" type="RayCast2D" parent="."]
position = Vector2( 0, -20 )
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 7

[node name="RayCast_2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 7

[node name="TimerLookAround" type="Timer" parent="."]
process_mode = 0
wait_time = 0.75
autostart = true

[node name="AreaAtack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAtack"]
shape = SubResource( 6 )

[node name="TimerDmgOverTime" type="Timer" parent="."]
process_mode = 0
wait_time = 0.85
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="TimerLookAround" to="." method="_on_TimerLookAround_timeout"]
[connection signal="body_entered" from="AreaAtack" to="." method="_on_AreaAtack_body_entered"]
[connection signal="body_exited" from="AreaAtack" to="." method="_on_AreaAtack_body_exited"]
[connection signal="timeout" from="TimerDmgOverTime" to="." method="_on_TimerDmgOverTime_timeout"]
